Added race CRUD endpoints
