# api/requests/race_requests.go
@@ -1,0 +1,9 @@
+package requests
+
+type CreateRaceRequest struct {
+	Name string `json:"name" validate:"required,max=200" example:"Barbarian"`
+}
+
+type UpdateRaceRequest struct {
+	Name string `json:"name" validate:"required,max=200" example:"Barbarian"`
+}
